chore: added redeploy action stack

--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,9 @@ inputs:
   stop_stack:
     description: "Stop stack"
     required: false
+  redeploy_stack:
+    description: "Redeploy stack"
+    required: false
 
 runs:
   using: "node20"
